[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/StartGameMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="StartGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 115.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 23.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 1 )
text = "Climatius"

[node name="CreateServer" type="Button" parent="."]
margin_left = 101.0
margin_top = 53.0
margin_right = 228.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
text = "Create Server"

[node name="JoinServer" type="Button" parent="."]
margin_left = 112.0
margin_top = 92.0
margin_right = 217.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "Join Server"

[node name="MainMenu" type="Button" parent="."]
margin_left = 134.0
margin_top = 131.0
margin_right = 192.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="JoinServer" to="." method="_on_JoinServer_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
